--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>A Title</title>
   </head>
   <body>
-    <p>And here's a oaragraph</p>
+    <p>And here's paragraph</p>
   </body>
 </html>
